--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -34,7 +34,8 @@
             "error",
             "always"
         ],
-        "no-console": 0
+        "no-console": 0,
+        "class-methods-use-this": 0
     },
     "plugins": [
         "import",
