--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -13,6 +13,7 @@
 			"moduleName": "babel-runtime"
 		}],
 		"transform-object-rest-spread",
-		"transform-class-properties"
+		"transform-class-properties",
+		"transform-async-generator-functions"
 	]
 }
