--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,9 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "chart.js": "^2.7.0",
+    "hyperscript": "^2.0.2",
+    "hyperscript-helpers": "^3.0.3",
+    "identicon.js": "^2.3.1",
     "list.js": "^1.5.0",
     "patternomaly": "^1.3.0",
     "rollbar": "^2.1.0"
