annoying eslint rule

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -35,7 +35,8 @@
             "always"
         ],
         "no-console": 0,
-        "class-methods-use-this": 0
+        "class-methods-use-this": 0,
+        "no-plusplus": 0
     },
     "plugins": [
         "import",
