--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,9 @@ frontend/public/dist/beaconing/*.css
 frontend/public/dist/beaconing/*.js
 frontend/public/dist/beaconing/*.map
 frontend/public/dist/beaconing/pages
+
+# vendor
+vendor/
+
+# binary
+/beaconing
