--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -36,7 +36,9 @@
         ],
         "no-console": 0,
         "class-methods-use-this": 0,
-        "no-plusplus": 0
+        "no-plusplus": 0,
+        "no-restricted-syntax": 0,
+        "no-param-reassign": [2, { "props": false }]
     },
     "plugins": [
         "import",
