--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-shopify": "^16.2.0",
     "color-convert": "^1.5.0",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
@@ -32,6 +33,7 @@
     "parallel-webpack": "^2.2.0",
     "sass-loader": "^6.0.6",
     "webpack": "^3.5.5",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-dev-server": "^2.7.1"
   },
   "scripts": {
@@ -43,13 +45,13 @@
     "flow": "./node_modules/.bin/flow"
   },
   "dependencies": {
+    "@shopify/draggable": "^1.0.0-beta.5",
     "babel-runtime": "^6.26.0",
     "chart.js": "^2.7.0",
     "hyperscript": "^2.0.2",
     "hyperscript-helpers": "^3.0.3",
     "identicon.js": "^2.3.1",
     "js-sha512": "^0.7.1",
-    "list.js": "^1.5.0",
-    "rollbar": "^2.3.7"
+    "list.js": "^1.5.0"
   }
 }
