--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,19 +1,27 @@
 {
 	"presets": [
-		"flow",
-		"env"
+		"@babel/preset-flow",
+		"@babel/preset-env"
 	],
 	"plugins": [
-		"syntax-dynamic-import",
-		"syntax-async-functions",
-		["transform-runtime", {
+		"@babel/plugin-syntax-dynamic-import",
+		"@babel/plugin-proposal-async-generator-functions",
+		"@babel/plugin-syntax-async-generators",
+		["@babel/plugin-transform-runtime", {
 			"helpers": false,
 			"polyfill": false,
 			"regenerator": true,
-			"moduleName": "babel-runtime"
+			"moduleName": "@babel/runtime"
 		}],
-		"transform-object-rest-spread",
-		"transform-class-properties",
-		"transform-async-generator-functions"
+		"@babel/plugin-proposal-object-rest-spread",
+		"@babel/plugin-proposal-class-properties",
+		"@babel/plugin-transform-flow-strip-types",
+		"@babel/plugin-proposal-pipeline-operator",
+		"@babel/plugin-proposal-optional-chaining",
+		"@babel/plugin-proposal-decorators",
+		"@babel/plugin-proposal-do-expressions",
+		"@babel/plugin-proposal-function-bind",
+		"@babel/plugin-proposal-nullish-coalescing-operator",
+		"@babel/plugin-syntax-nullish-coalescing-operator"
 	]
 }
