--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,25 +6,33 @@
   "author": "elliott.judd@hands-free.co.uk",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-async-generator-functions": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-shopify": "^16.2.0",
+    "@babel/core": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-function-bind": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.42",
+    "@babel/plugin-syntax-async-generators": "^7.0.0-beta.42",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.42",
+    "@babel/plugin-syntax-nullish-coalescing-operator": "^7.0.0-beta.42",
+    "@babel/plugin-transform-flow-strip-types": "^7.0.0-beta.42",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.42",
+    "@babel/preset-env": "^7.0.0-beta.42",
+    "@babel/preset-flow": "^7.0.0-beta.42",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^8.0.0-beta.2",
     "color-convert": "^1.5.0",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
-    "eslint": "^4.6.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-flowtype": "^2.39.1",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-import": "^2.10.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "json5-loader": "^1.0.1",
     "minimatch": "^3.0.4",
@@ -45,8 +53,8 @@
     "flow": "./node_modules/.bin/flow"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.42",
     "@shopify/draggable": "^1.0.0-beta.5",
-    "babel-runtime": "^6.26.0",
     "chart.js": "^2.7.0",
     "hyperscript": "^2.0.2",
     "hyperscript-helpers": "^3.0.3",
