--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "color-convert": "^1.5.0",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
-    "eslint": "^4.19.1",
+    "eslint": "^5.0.0-alpha.0",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-flowtype": "^2.46.1",
