removed cached stuff; gitignore update

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 
 backend/beaconing
 
-images/*.png
-images/*.jpg
-images/*.jpeg
+image/*.png
+image/*.jpg
+image/*.jpeg
 
 ### macOS ###
 *.DS_Store
