--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,7 +50,8 @@
     "server": "export NODE_ENV=development && ./node_modules/.bin/webpack-dev-server",
     "build-production": "export NODE_ENV=production && ./node_modules/.bin/parallel-webpack",
     "bp": "export NODE_ENV=production && ./node_modules/.bin/parallel-webpack",
-    "flow": "./node_modules/.bin/flow"
+    "flow": "./node_modules/.bin/flow",
+    "analyse": "export NODE_ENV=development && export analyse=true && ./node_modules/.bin/webpack" 
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
