--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,12 +51,14 @@
     "build-production": "export NODE_ENV=production && ./node_modules/.bin/parallel-webpack",
     "bp": "export NODE_ENV=production && ./node_modules/.bin/parallel-webpack",
     "flow": "./node_modules/.bin/flow",
-    "analyse": "export NODE_ENV=development && export analyse=true && ./node_modules/.bin/webpack" 
+    "analyse": "export NODE_ENV=development && export analyse=true && ./node_modules/.bin/webpack"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
     "@shopify/draggable": "^1.0.0-beta.5",
     "chart.js": "^2.7.0",
+    "fullcalendar": "^3.9.0",
+    "hard-source-webpack-plugin": "^0.6.4",
     "hyperscript": "^2.0.2",
     "hyperscript-helpers": "^3.0.3",
     "identicon.js": "^2.3.1",
