--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,8 @@
     "color-convert": "^1.5.0",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
-    "eslint": "^5.0.0-alpha.3",
     "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-nullish-coalescing": "^4.19.1",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-import": "^2.10.0",
