making a start on i18n

--- a/frontend/src/config/i18n.config.json5
+++ b/frontend/src/config/i18n.config.json5
@@ -1,13 +1,222 @@
 {
+    // Main Navigation //
+
+    nav_home: {
+        'en-GB': 'Home',
+        'fr-FR': 'Acceuil',
+        'es-ES': 'Principal',
+        'it-IT': 'Home',
+        'de-DE': 'Start',
+        'ro-RO': 'Home', // Romanian is english temporarily until i18n doc is filled
+        'pl-PL': 'Ekran główny',
+        'tr-TR': 'Ana Sayfa',
+        'pt-PT': 'Início',
+    },
+    nav_classroom: {
+        'en-GB': 'Classroom',
+        'fr-FR': 'Classes',
+        'es-ES': 'Clase',
+        'it-IT': 'Classe',
+        'de-DE': 'Klassenzimmer',
+        'ro-RO': 'Classroom',
+        'pl-PL': 'Klasa',
+        'tr-TR': 'Sınıf',
+        'pt-PT': 'Sala de aula',
+    },
+    nav_lesson_manager: {
+        'en-GB': 'Lesson Manager',
+        'fr-FR': 'Gestion des Leçons',
+        'es-ES': 'Gestor de Lecciones',
+        'it-IT': 'Gestione delle lezioni',
+        'de-DE': 'Unterrichtsplaner',
+        'ro-RO': 'Lesson Manager',
+        'pl-PL': 'Manager lekcji',
+        'tr-TR': 'Ders Yöneticisi',
+        'pt-PT': 'Gestão de aulas',
+    },
+    nav_calendar: {
+        'en-GB': 'Calendar',
+        'fr-FR': 'Calendrier',
+        'es-ES': 'Calendario',
+        'it-IT': 'Calendario',
+        'de-DE': 'Kalender',
+        'ro-RO': 'Calendar',
+        'pl-PL': 'Kalendarz',
+        'tr-TR': 'Takvim',
+        'pt-PT': 'Agenda',
+    },
+    nav_forum: {
+        'en-GB': 'Forum',
+        'fr-FR': 'Forum',
+        'es-ES': 'Foro',
+        'it-IT': 'Forum',
+        'de-DE': 'Forum',
+        'ro-RO': 'Forum',
+        'pl-PL': 'Forum',
+        'tr-TR': 'Forum',
+        'pt-PT': 'Fórum',
+    },
+    nav_search: {
+        'en-GB': 'Search',
+        'fr-FR': 'Chercher',
+        'es-ES': 'Buscar',
+        'it-IT': 'Cerca',
+        'de-DE': 'Suche',
+        'ro-RO': 'Search',
+        'pl-PL': 'Szukaj',
+        'tr-TR': 'Arama',
+        'pt-PT': 'Procurar',
+    },
+    nav_access: {
+        'en-GB': 'Accessibility',
+        'fr-FR': 'Accessibilité',
+        'es-ES': 'Accesibilidad',
+        'it-IT': 'Accessibilità',
+        'de-DE': 'Barrierefreiheit',
+        'ro-RO': 'Accessibility',
+        'pl-PL': 'Dostępność',
+        'tr-TR': 'Erişilebilirlik',
+        'pt-PT': 'Acessibilidade',
+    },
+
+    // General //
+
+    sort_by: {
+        'en-GB': 'Sort By',
+        'fr-FR': 'Trier par',
+        'es-ES': 'Ordenar por',
+        'it-IT': 'Ordina per',
+        'de-DE': 'Sortieren nach',
+        'ro-RO': 'Sort By',
+        'pl-PL': 'Sortuj według',
+        'tr-TR': 'Sıra Önceliği',
+        'pt-PT': 'Ordenar por',
+    },
+    loading: {
+        'en-GB': 'Loading',
+        'fr-FR': 'Chargement',
+        'es-ES': 'Cargando',
+        'it-IT': 'Caricamento',
+        'de-DE': 'Lädt',
+        'ro-RO': 'Loading',
+        'pl-PL': 'Ładowanie',
+        'tr-TR': 'Yüklüyor',
+        'pt-PT': 'A carregar',
+    },
+    view: {
+        'en-GB': 'View',
+        'fr-FR': 'Voir',
+        'es-ES': 'Ver',
+        'it-IT': 'Mostra',
+        'de-DE': 'Ansehen',
+        'ro-RO': 'View',
+        'pl-PL': 'Podgląd',
+        'tr-TR': 'Görüntüle',
+        'pt-PT': 'Visualizar',
+    },
+    edit: {
+        'en-GB': 'Edit',
+        'fr-FR': 'Modifier',
+        'es-ES': 'Editar',
+        'it-IT': 'Modifica',
+        'de-DE': 'Bearbeiten',
+        'ro-RO': 'Edit',
+        'pl-PL': 'Edytuj',
+        'tr-TR': 'Düzenle',
+        'pt-PT': 'Editar',
+    },
+    edit: {
+        'en-GB': 'Edit',
+        'fr-FR': 'Modifier',
+        'es-ES': 'Editar',
+        'it-IT': 'Modifica',
+        'de-DE': 'Bearbeiten',
+        'ro-RO': 'Edit',
+        'pl-PL': 'Edytuj',
+        'tr-TR': 'Düzenle',
+        'pt-PT': 'Editar',
+    },
+
+    // Header //
+
+    log_out: {
+        'en-GB': 'Log Out',
+        'fr-FR': 'Déconnection',
+        'es-ES': 'Cerrar sesión',
+        'it-IT': 'Esci',
+        'de-DE': 'Ausloggen',
+        'ro-RO': 'Log Out',
+        'pl-PL': 'Wyloguj',
+        'tr-TR': 'Giriş',
+        'pt-PT': 'Encerrar sessão',
+    },
+    logo_title: {
+        'en-GB': 'Click to go to Home',
+        'fr-FR': 'Cliquer pour retourner à l’acceuil',
+        'es-ES': 'Click para volver a la página principal',
+        'it-IT': 'Clicca per tornare alla Home',
+        'de-DE': 'Klicken, um zur Startseite zu gelangen',
+        'ro-RO': 'Click to go to Home',
+        'pl-PL': 'Kliknij aby wrócić do ekranu głównego',
+        'tr-TR': 'Ana Sayfa için Tıklayın',
+        'pt-PT': 'Clicar para voltar ao início',
+    },
+
+    // Home Page //
+
     edit_layout: {
         'en-GB': 'Edit Layout',
         'fr-FR': 'Modifer la disposition',
         'es-ES': 'Editar organización',
         'it-IT': 'Modifica il layout',
         'de-DE': 'Bearbeite Layout',
-        'ro-RO': '',
+        'ro-RO': 'Edit Layout',
         'pl-PL': 'Edytuj Layout',
         'tr-TR': 'Görünümü Düzenle',
-        'pt-PT': '',
+        'pt-PT': 'Editar disposição',
+    },
+    widget_ra_title: {
+        'en-GB': 'Your Recent Activities',
+        'fr-FR': 'Vos dernières activités',
+        'es-ES': 'Actividades Recientes',
+        'it-IT': 'Attività recenti',
+        'de-DE': 'Ihre jüngsten Aktivitäten',
+        'ro-RO': 'Your Recent Activities',
+        'pl-PL': 'Ostatnia aktywność',
+        'tr-TR': 'Son Etkinlikleriniz',
+        'pt-PT': 'Atividades recentes',
+    },
+    widget_ra_no_act: {
+        'en-GB': 'No Recent Activities',
+        'fr-FR': 'Aucune activités récentes',
+        'es-ES': 'No hay actividades recientes',
+        'it-IT': 'Nessuna attività recente',
+        'de-DE': 'Keine kürzlichen Aktivitäten',
+        'ro-RO': 'No Recent Activities',
+        'pl-PL': 'Brak ostatnich aktywności',
+        'tr-TR': 'Son Dönemde Aktivite Yok',
+        'pt-PT': 'Não há atividades recentes',
+    },
+    widget_ap_title: {
+        'en-GB': 'Active Lesson Plans',
+        'fr-FR': 'Leçons actives',
+        'es-ES': 'Lecciones Activas',
+        'it-IT': 'Piani di lezioni attivi',
+        'de-DE': 'Aktive Lehrpläne',
+        'ro-RO': 'Active Lesson Plans',
+        'pl-PL': 'Aktywne plany nauczania',
+        'tr-TR': 'Aktif Ders Planları',
+        'pt-PT': 'Planos letivos ativos',
+    },
+    widget_ap_no_plans: {
+        'en-GB': 'No Active Plans',
+        'fr-FR': 'Aucunes leçons actives',
+        'es-ES': 'No hay planes activos',
+        'it-IT': 'Nessun piano attivo',
+        'de-DE': 'Keine aktiven Pläne',
+        'ro-RO': 'No Active Plans',
+        'pl-PL': 'Brak aktywnych planów',
+        'tr-TR': 'Aktif Plan Yok',
+        'pt-PT': 'Não há planos ativos',
     },
 }
