adding more phrases; fixing another infinite loading bug in student ov

--- a/frontend/src/config/i18n.config.json5
+++ b/frontend/src/config/i18n.config.json5
@@ -136,6 +136,50 @@
         'tr-TR': 'Düzenle',
         'pt-PT': 'Editar',
     },
+    group: {
+        'en-GB': 'Group',
+        'fr-FR': 'Groupe',
+        'es-ES': 'Grupo',
+        'it-IT': 'Gruppo',
+        'de-DE': 'Gruppe',
+        'ro-RO': 'Grup',
+        'pl-PL': 'Gruppa',
+        'tr-TR': 'Grup',
+        'pt-PT': 'Grupo',
+    },
+    week: {
+        'en-GB': 'Week',
+        'fr-FR': 'Semaine',
+        'es-ES': 'Semana',
+        'it-IT': 'Settimana',
+        'de-DE': 'Woche',
+        'ro-RO': 'Săptămână',
+        'pl-PL': 'Tydzień',
+        'tr-TR': 'Hafta',
+        'pt-PT': 'Semana',
+    },
+    month: {
+        'en-GB': 'Month',
+        'fr-FR': 'Mois',
+        'es-ES': 'Mes',
+        'it-IT': 'Mese',
+        'de-DE': 'Monat',
+        'ro-RO': 'Lună',
+        'pl-PL': 'Miesiąc',
+        'tr-TR': 'Ay',
+        'pt-PT': 'Yıl',
+    },
+    year: {
+        'en-GB': 'Year',
+        'fr-FR': 'Année',
+        'es-ES': 'Año',
+        'it-IT': 'Anno',
+        'de-DE': 'Jahr',
+        'ro-RO': 'Ano',
+        'pl-PL': 'Rok',
+        'tr-TR': 'Yıl',
+        'pt-PT': 'Ano',
+    },
 
     // Header //
 
@@ -208,6 +252,17 @@
         'tr-TR': 'Aktif Ders Planları',
         'pt-PT': 'Planos letivos ativos',
     },
+    widget_ap_link_title: {
+        'en-GB': 'View Active Lesson Plans',
+        'fr-FR': 'Voir les leçons actives',
+        'es-ES': 'Ver Lecciones Activas',
+        'it-IT': 'Vedi piani di lezioni attive',
+        'de-DE': 'Zeige aktive Lehrpläne',
+        'ro-RO': 'View Active Lesson Plans',
+        'pl-PL': 'Podgląd aktywnych planów nauczania',
+        'tr-TR': 'Aktif Ders Planlarını Görüntüle',
+        'pt-PT': 'Ver planos letivos ativos',
+    },
     widget_ap_no_plans: {
         'en-GB': 'No Active Plans',
         'fr-FR': 'Aucunes leçons actives',
@@ -218,5 +273,93 @@
         'pl-PL': 'Brak aktywnych planów',
         'tr-TR': 'Aktif Plan Yok',
         'pt-PT': 'Não há planos ativos',
+    },
+    widget_so_title: {
+        'en-GB': 'Student Overview',
+        'fr-FR': 'Visualisation Etudiant',
+        'es-ES': 'Vista de estudiante',
+        'it-IT': 'Panoramica degli studenti',
+        'de-DE': 'Schülerüberblick',
+        'ro-RO': 'Student Overview',
+        'pl-PL': 'Podgląd ucznia',
+        'tr-TR': 'Öğrenci Bilgileri',
+        'pt-PT': 'Visão geral do aluno',
+    },
+    widget_so_link_title: {
+        'en-GB': 'View Students',
+        'fr-FR': 'Voir les étudiants',
+        'es-ES': 'Ver estudiantes',
+        'it-IT': 'Guarda gli studenti',
+        'de-DE': 'Schüler ansehen',
+        'ro-RO': 'Student Overview',
+        'pl-PL': 'Podgląd ucznów',
+        'tr-TR': 'Öğrencileri Görüntüle',
+        'pt-PT': 'Ver os alunos',
+    },
+    widget_so_no_group: {
+        'en-GB': 'At least one group must exist to use Student Overview',
+        'fr-FR': 'Il faut au moins 1 groupe pour utiliser cette fonctionnalité',
+        'es-ES': 'Debe existir al menos un grupo para utilizar la vista de estudiante',
+        'it-IT': 'Deve esserci almeno un gruppo per avere una panoramica degli studenti',
+        'de-DE': 'Es muss mindestens eine Gruppe bestehen, um die Schülerübersicht benutzen zu können',
+        'ro-RO': 'At least one group must exist to use Student Overview',
+        'pl-PL': 'Przynajmniej jedna grupa musi istnieć aby użyć przeglądu ucznia!',
+        'tr-TR': 'Öğrenci Özet Görünümü için en az bir  Grup olmalıdır',
+        'pt-PT': 'Tem de existir pelo menos um grupo para poder ter uma visão geral dos alunos',
+    },
+    widget_so_bp: {
+        'en-GB': 'Best Performing',
+        'fr-FR': 'Les plus performants',
+        'es-ES': 'Mejor Rendimiento',
+        'it-IT': 'Rendimento migliore',
+        'de-DE': 'Beste Leistung',
+        'ro-RO': 'Best Performing',
+        'pl-PL': 'Najlepsze osiągnięcia',
+        'tr-TR': 'En İyi performans',
+        'pt-PT': 'Com melhor desempenho',
+    },
+    widget_so_na: {
+        'en-GB': 'Needs Attention',
+        'fr-FR': 'Ils requièrent votre attention',
+        'es-ES': 'Necesita Atención',
+        'it-IT': 'Richiede attenzione',
+        'de-DE': 'Braucht Aufmerksamkeit',
+        'ro-RO': 'Best Performing',
+        'pl-PL': 'Potrzebuje uwagi',
+        'tr-TR': 'İlgi Gerektiriyor',
+        'pt-PT': 'Requerem atenção',
+    },
+    widget_so_mi: {
+        'en-GB': 'Most Improvement',
+        'fr-FR': 'Ils ont le plus progressés',
+        'es-ES': 'Mayor Mejoría',
+        'it-IT': 'Miglioramento maggiore',
+        'de-DE': 'Meiste Verbesserung',
+        'ro-RO': 'Most Improvement',
+        'pl-PL': 'Największy postęp',
+        'tr-TR': 'En Fazla İyileşen',
+        'pt-PT': 'Que mais melhoraram',
+    },
+    widget_so_op: {
+        'en-GB': 'Overall Percentage',
+        'fr-FR': 'Pourcentage global',
+        'es-ES': 'Porcentaje General',
+        'it-IT': 'Percentuale globale',
+        'de-DE': 'Gesamtprozentzahl',
+        'ro-RO': 'Overall Percentage',
+        'pl-PL': 'Procent całkowity',
+        'tr-TR': 'Ortalama Yüzde',
+        'pt-PT': 'Percentagem geral',
+    },
+    widget_so_oi: {
+        'en-GB': 'Overall Improvement',
+        'fr-FR': 'Amélioration globale',
+        'es-ES': 'Mejora general',
+        'it-IT': 'Miglioramento enerale',
+        'de-DE': 'Gesamtverbesserung',
+        'ro-RO': 'Îmbunătățirea generală',
+        'pl-PL': 'Ogólna poprawa',
+        'tr-TR': 'Genel iyileştirme',
+        'pt-PT': 'Melhoria geral',
     },
 }
