i18n additions; fix student overview wrong i18n msg; bump version number

--- a/frontend/src/config/i18n.config.json5
+++ b/frontend/src/config/i18n.config.json5
@@ -7,7 +7,7 @@
         'es-ES': 'Principal',
         'it-IT': 'Home',
         'de-DE': 'Start',
-        'ro-RO': 'Home', // Romanian is english temporarily until i18n doc is filled
+        'ro-RO': 'Acasă', // Romanian is english temporarily until i18n doc is filled
         'pl-PL': 'Ekran główny',
         'tr-TR': 'Ana Sayfa',
         'pt-PT': 'Início',
@@ -18,7 +18,7 @@
         'es-ES': 'Clase',
         'it-IT': 'Classe',
         'de-DE': 'Klassenzimmer',
-        'ro-RO': 'Classroom',
+        'ro-RO': 'Clasă',
         'pl-PL': 'Klasa',
         'tr-TR': 'Sınıf',
         'pt-PT': 'Sala de aula',
@@ -29,7 +29,7 @@
         'es-ES': 'Gestor de Lecciones',
         'it-IT': 'Gestione delle lezioni',
         'de-DE': 'Unterrichtsplaner',
-        'ro-RO': 'Lesson Manager',
+        'ro-RO': 'Manager de lecții',
         'pl-PL': 'Manager lekcji',
         'tr-TR': 'Ders Yöneticisi',
         'pt-PT': 'Gestão de aulas',
@@ -62,7 +62,7 @@
         'es-ES': 'Buscar',
         'it-IT': 'Cerca',
         'de-DE': 'Suche',
-        'ro-RO': 'Search',
+        'ro-RO': 'Căutare',
         'pl-PL': 'Szukaj',
         'tr-TR': 'Arama',
         'pt-PT': 'Procurar',
@@ -73,7 +73,7 @@
         'es-ES': 'Accesibilidad',
         'it-IT': 'Accessibilità',
         'de-DE': 'Barrierefreiheit',
-        'ro-RO': 'Accessibility',
+        'ro-RO': 'Accesibilitate',
         'pl-PL': 'Dostępność',
         'tr-TR': 'Erişilebilirlik',
         'pt-PT': 'Acessibilidade',
@@ -87,7 +87,7 @@
         'es-ES': 'Ordenar por',
         'it-IT': 'Ordina per',
         'de-DE': 'Sortieren nach',
-        'ro-RO': 'Sort By',
+        'ro-RO': 'Sortează după',
         'pl-PL': 'Sortuj według',
         'tr-TR': 'Sıra Önceliği',
         'pt-PT': 'Ordenar por',
@@ -98,7 +98,7 @@
         'es-ES': 'Cargando',
         'it-IT': 'Caricamento',
         'de-DE': 'Lädt',
-        'ro-RO': 'Loading',
+        'ro-RO': 'Se încarcă',
         'pl-PL': 'Ładowanie',
         'tr-TR': 'Yüklüyor',
         'pt-PT': 'A carregar',
@@ -109,7 +109,7 @@
         'es-ES': 'Ver',
         'it-IT': 'Mostra',
         'de-DE': 'Ansehen',
-        'ro-RO': 'View',
+        'ro-RO': 'Vizualizare',
         'pl-PL': 'Podgląd',
         'tr-TR': 'Görüntüle',
         'pt-PT': 'Visualizar',
@@ -120,18 +120,7 @@
         'es-ES': 'Editar',
         'it-IT': 'Modifica',
         'de-DE': 'Bearbeiten',
-        'ro-RO': 'Edit',
-        'pl-PL': 'Edytuj',
-        'tr-TR': 'Düzenle',
-        'pt-PT': 'Editar',
-    },
-    edit: {
-        'en-GB': 'Edit',
-        'fr-FR': 'Modifier',
-        'es-ES': 'Editar',
-        'it-IT': 'Modifica',
-        'de-DE': 'Bearbeiten',
-        'ro-RO': 'Edit',
+        'ro-RO': 'Editare',
         'pl-PL': 'Edytuj',
         'tr-TR': 'Düzenle',
         'pt-PT': 'Editar',
@@ -175,7 +164,7 @@
         'es-ES': 'Año',
         'it-IT': 'Anno',
         'de-DE': 'Jahr',
-        'ro-RO': 'Ano',
+        'ro-RO': 'An',
         'pl-PL': 'Rok',
         'tr-TR': 'Yıl',
         'pt-PT': 'Ano',
@@ -189,7 +178,7 @@
         'es-ES': 'Cerrar sesión',
         'it-IT': 'Esci',
         'de-DE': 'Ausloggen',
-        'ro-RO': 'Log Out',
+        'ro-RO': 'Deconectare',
         'pl-PL': 'Wyloguj',
         'tr-TR': 'Giriş',
         'pt-PT': 'Encerrar sessão',
@@ -200,7 +189,7 @@
         'es-ES': 'Click para volver a la página principal',
         'it-IT': 'Clicca per tornare alla Home',
         'de-DE': 'Klicken, um zur Startseite zu gelangen',
-        'ro-RO': 'Click to go to Home',
+        'ro-RO': 'Apăsați pentru a merge la pagina Acasă',
         'pl-PL': 'Kliknij aby wrócić do ekranu głównego',
         'tr-TR': 'Ana Sayfa için Tıklayın',
         'pt-PT': 'Clicar para voltar ao início',
@@ -214,7 +203,7 @@
         'es-ES': 'Editar organización',
         'it-IT': 'Modifica il layout',
         'de-DE': 'Bearbeite Layout',
-        'ro-RO': 'Edit Layout',
+        'ro-RO': 'Editare șablon',
         'pl-PL': 'Edytuj Layout',
         'tr-TR': 'Görünümü Düzenle',
         'pt-PT': 'Editar disposição',
@@ -225,7 +214,7 @@
         'es-ES': 'Actividades Recientes',
         'it-IT': 'Attività recenti',
         'de-DE': 'Ihre jüngsten Aktivitäten',
-        'ro-RO': 'Your Recent Activities',
+        'ro-RO': 'Activități recente',
         'pl-PL': 'Ostatnia aktywność',
         'tr-TR': 'Son Etkinlikleriniz',
         'pt-PT': 'Atividades recentes',
@@ -236,7 +225,7 @@
         'es-ES': 'No hay actividades recientes',
         'it-IT': 'Nessuna attività recente',
         'de-DE': 'Keine kürzlichen Aktivitäten',
-        'ro-RO': 'No Recent Activities',
+        'ro-RO': 'Nicio activitate recentă',
         'pl-PL': 'Brak ostatnich aktywności',
         'tr-TR': 'Son Dönemde Aktivite Yok',
         'pt-PT': 'Não há atividades recentes',
@@ -247,7 +236,7 @@
         'es-ES': 'Lecciones Activas',
         'it-IT': 'Piani di lezioni attivi',
         'de-DE': 'Aktive Lehrpläne',
-        'ro-RO': 'Active Lesson Plans',
+        'ro-RO': 'Planuri de lecție active',
         'pl-PL': 'Aktywne plany nauczania',
         'tr-TR': 'Aktif Ders Planları',
         'pt-PT': 'Planos letivos ativos',
@@ -258,7 +247,7 @@
         'es-ES': 'Ver Lecciones Activas',
         'it-IT': 'Vedi piani di lezioni attive',
         'de-DE': 'Zeige aktive Lehrpläne',
-        'ro-RO': 'View Active Lesson Plans',
+        'ro-RO': 'Vizualizează planurile de lecție active',
         'pl-PL': 'Podgląd aktywnych planów nauczania',
         'tr-TR': 'Aktif Ders Planlarını Görüntüle',
         'pt-PT': 'Ver planos letivos ativos',
@@ -269,7 +258,7 @@
         'es-ES': 'No hay planes activos',
         'it-IT': 'Nessun piano attivo',
         'de-DE': 'Keine aktiven Pläne',
-        'ro-RO': 'No Active Plans',
+        'ro-RO': 'Niciun plan activ',
         'pl-PL': 'Brak aktywnych planów',
         'tr-TR': 'Aktif Plan Yok',
         'pt-PT': 'Não há planos ativos',
@@ -280,7 +269,7 @@
         'es-ES': 'Vista de estudiante',
         'it-IT': 'Panoramica degli studenti',
         'de-DE': 'Schülerüberblick',
-        'ro-RO': 'Student Overview',
+        'ro-RO': 'Informații generale elev',
         'pl-PL': 'Podgląd ucznia',
         'tr-TR': 'Öğrenci Bilgileri',
         'pt-PT': 'Visão geral do aluno',
@@ -291,7 +280,7 @@
         'es-ES': 'Ver estudiantes',
         'it-IT': 'Guarda gli studenti',
         'de-DE': 'Schüler ansehen',
-        'ro-RO': 'Student Overview',
+        'ro-RO': 'Vizualizează elevii',
         'pl-PL': 'Podgląd ucznów',
         'tr-TR': 'Öğrencileri Görüntüle',
         'pt-PT': 'Ver os alunos',
@@ -302,7 +291,7 @@
         'es-ES': 'Debe existir al menos un grupo para utilizar la vista de estudiante',
         'it-IT': 'Deve esserci almeno un gruppo per avere una panoramica degli studenti',
         'de-DE': 'Es muss mindestens eine Gruppe bestehen, um die Schülerübersicht benutzen zu können',
-        'ro-RO': 'At least one group must exist to use Student Overview',
+        'ro-RO': 'Trebuie să existe cel puțin un grup pentru a folosi opțiunea Informații generale elev!',
         'pl-PL': 'Przynajmniej jedna grupa musi istnieć aby użyć przeglądu ucznia!',
         'tr-TR': 'Öğrenci Özet Görünümü için en az bir  Grup olmalıdır',
         'pt-PT': 'Tem de existir pelo menos um grupo para poder ter uma visão geral dos alunos',
@@ -313,7 +302,7 @@
         'es-ES': 'Mejor Rendimiento',
         'it-IT': 'Rendimento migliore',
         'de-DE': 'Beste Leistung',
-        'ro-RO': 'Best Performing',
+        'ro-RO': 'Cel mai bun rezultat',
         'pl-PL': 'Najlepsze osiągnięcia',
         'tr-TR': 'En İyi performans',
         'pt-PT': 'Com melhor desempenho',
@@ -324,7 +313,7 @@
         'es-ES': 'Necesita Atención',
         'it-IT': 'Richiede attenzione',
         'de-DE': 'Braucht Aufmerksamkeit',
-        'ro-RO': 'Best Performing',
+        'ro-RO': 'Necestită atenție',
         'pl-PL': 'Potrzebuje uwagi',
         'tr-TR': 'İlgi Gerektiriyor',
         'pt-PT': 'Requerem atenção',
@@ -335,7 +324,7 @@
         'es-ES': 'Mayor Mejoría',
         'it-IT': 'Miglioramento maggiore',
         'de-DE': 'Meiste Verbesserung',
-        'ro-RO': 'Most Improvement',
+        'ro-RO': 'Cel mai mare progres',
         'pl-PL': 'Największy postęp',
         'tr-TR': 'En Fazla İyileşen',
         'pt-PT': 'Que mais melhoraram',
@@ -346,7 +335,7 @@
         'es-ES': 'Porcentaje General',
         'it-IT': 'Percentuale globale',
         'de-DE': 'Gesamtprozentzahl',
-        'ro-RO': 'Overall Percentage',
+        'ro-RO': 'Procentaj general',
         'pl-PL': 'Procent całkowity',
         'tr-TR': 'Ortalama Yüzde',
         'pt-PT': 'Percentagem geral',
@@ -357,9 +346,56 @@
         'es-ES': 'Mejora general',
         'it-IT': 'Miglioramento enerale',
         'de-DE': 'Gesamtverbesserung',
-        'ro-RO': 'Îmbunătățirea generală',
+        'ro-RO': 'Progres general',
         'pl-PL': 'Ogólna poprawa',
         'tr-TR': 'Genel iyileştirme',
         'pt-PT': 'Melhoria geral',
+    },
+
+    // Footer //
+
+    ft_support: {
+        'en-GB': 'Support',
+        'fr-FR': 'Aide',
+        'es-ES': 'Soporte',
+        'it-IT': 'Assistenza',
+        'de-DE': 'Support',
+        'ro-RO': 'Suport',
+        'pl-PL': 'Pomoc',
+        'tr-TR': 'Destek',
+        'pt-PT': 'Suporte',
+    },
+    ft_cont_us: {
+        'en-GB': 'Contact Us',
+        'fr-FR': 'Contactez-nous',
+        'es-ES': 'Contáctanos',
+        'it-IT': 'Contatti',
+        'de-DE': 'Kontaktieren Sie uns',
+        'ro-RO': 'Contectează-ne',
+        'pl-PL': 'Kontakt',
+        'tr-TR': 'Bizi Arayın',
+        'pt-PT': 'Contacte-nos',
+    },
+    ft_tc: {
+        'en-GB': 'Terms & Conditions',
+        'fr-FR': 'Conditions & Services',
+        'es-ES': 'Términos y Condiciones',
+        'it-IT': 'Termini e Condizioni',
+        'de-DE': 'Geschäftsbedingungen',
+        'ro-RO': 'Termeni și condiții',
+        'pl-PL': 'Regulamin',
+        'tr-TR': 'Şartlar & Koşullar',
+        'pt-PT': 'Termos e condições',
+    },
+    ft_pp: {
+        'en-GB': 'Privacy Policy',
+        'fr-FR': 'Politique de vie privée',
+        'es-ES': 'Política de Privacidad',
+        'it-IT': 'Privacy Policy',
+        'de-DE': 'Datenschutzerklärung',
+        'ro-RO': 'Politică de confidențialitate',
+        'pl-PL': 'Polityka prywatności',
+        'tr-TR': 'Gizlilik Politikası',
+        'pt-PT': 'Política de privacidade',
     },
 }
