--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,15 @@
   "main": "webpack.config.js",
   "author": "elliott.judd@hands-free.co.uk",
   "license": "ISC",
+  "scripts": {
+    "build": "yarn bp",
+    "b": "export NODE_ENV=development && ./node_modules/.bin/parallel-webpack",
+    "server": "export NODE_ENV=development && ./node_modules/.bin/webpack-dev-server",
+    "build-production": "yarn bp",
+    "bp": "export NODE_ENV=production && ./node_modules/.bin/parallel-webpack",
+    "flow": "./node_modules/.bin/flow",
+    "analyse": "export NODE_ENV=development && export analyse=true && ./node_modules/.bin/webpack"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.42",
     "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.42",
@@ -44,15 +53,6 @@
     "webpack": "^3.5.5",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-dev-server": "^2.7.1"
-  },
-  "scripts": {
-    "build": "export NODE_ENV=development && ./node_modules/.bin/parallel-webpack",
-    "b": "export NODE_ENV=development && ./node_modules/.bin/parallel-webpack",
-    "server": "export NODE_ENV=development && ./node_modules/.bin/webpack-dev-server",
-    "build-production": "export NODE_ENV=production && ./node_modules/.bin/parallel-webpack",
-    "bp": "export NODE_ENV=production && ./node_modules/.bin/parallel-webpack",
-    "flow": "./node_modules/.bin/flow",
-    "analyse": "export NODE_ENV=development && export analyse=true && ./node_modules/.bin/webpack"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
