--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,11 +37,11 @@
     "color-convert": "^1.5.0",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
+    "eslint": "^5.0.0-rc.0",
     "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-nullish-coalescing": "^4.19.1",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-flowtype": "^2.46.1",
-    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-import": "^2.12.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "flow-bin": "^0.74.0",
     "hard-source-webpack-plugin": "^0.6.4",
