--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,19 @@
 {
   "name": "beaconing-ui",
-  "version": "0.0.1",
+  "version": "0.6.0",
   "description": "Beaconing UI",
   "main": "webpack.config.js",
-  "author": "elliott.judd@hands-free.co.uk",
-  "license": "ISC",
+  "author": {
+    "name": "Elliott Judd",
+    "email": "elliott.judd@hands-free.co.uk"
+  },
+  "contributors": [
+    {
+      "name": "Felix Angell",
+      "email": "felix.angell@hands-free.co.uk"
+    }
+  ],
+  "license": "AGPL-3.0-or-later",
   "scripts": {
     "build": "yarn bp",
     "b": "export NODE_ENV=development && ./node_modules/.bin/parallel-webpack",
