--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -14,7 +14,7 @@
 			"moduleName": "@babel/runtime"
 		}],
 		"@babel/plugin-proposal-object-rest-spread",
-		"@babel/plugin-proposal-decorators",
+		["@babel/plugin-proposal-decorators", { "legacy": true }],
 		"@babel/plugin-proposal-class-properties",
 		"@babel/plugin-transform-flow-strip-types",
 		"@babel/plugin-proposal-pipeline-operator",
