adding new eslint rules for codacy

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -39,12 +39,22 @@
         "no-plusplus": 0,
         "no-restricted-syntax": 0,
         "no-param-reassign": [2, { "props": false }],
-        "babel/semi": 1
+        "babel/semi": 1,
+        "no-div-regex": 1,
+        "wrap-regex": 1,
+        "no-regex-spaces": 1,
+        "no-unsafe-regex/no-unsafe-regex": 2,
+        "security_detect-possible-timing-attacks": 2,
+        "security_detect-pseudoRandomBytes": 2,
+        "security_detect-no-csrf-before-method-override": 2,
+        "security_detect-buffer-noassert": 2,
+        "security_detect-non-literal-fs-filename": 2
     },
     "plugins": [
         "import",
         "flowtype",
-        "babel"
+        "babel",
+        "no-unsafe-regex"
     ],
     "settings": {
         "flowtype": {
