--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-babel": "5.1.0",
     "eslint-plugin-flowtype": "2.49.3",
     "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-no-unsafe-regex": "^1.0.0",
     "extract-text-webpack-plugin": "3.0.2",
     "flow-bin": "0.75.0",
     "hard-source-webpack-plugin": "0.8.1",
@@ -58,9 +59,9 @@
     "minimatch": "3.0.4",
     "node-sass": "4.9.0",
     "optimize-css-assets-webpack-plugin": "2.0.0",
-    "webpack": "3.12.0",
-    "sass-loader": "6.0.7",
     "parallel-webpack": "2.3.0",
+    "sass-loader": "6.0.7",
+    "webpack": "3.12.0",
     "webpack-bundle-analyzer": "2.11.1",
     "webpack-dev-server": "2.7.1"
   },
