change today to current month

--- a/frontend/src/config/i18n.config.json5
+++ b/frontend/src/config/i18n.config.json5
@@ -2327,7 +2327,7 @@
     },
 
     cal_today: {
-        'en-GB': 'Today',
+        'en-GB': 'Current',
         'fr-FR': '',
         'es-ES': '',
         'it-IT': '',
